@@ -1,4 +1,4 @@
-Copyright (c) 2006, Lobo Internet Services, Ltd.
+Copyright (c) 2007, Lobo Internet Services, Ltd.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
